@@ -3,6 +3,8 @@ Version History :
 v10.1.19
 - projectModel: fixed a little bug in Sequence class, where it was trying to
   get info variables for non standart file names
+- mayaEnv: fixed setting of playblast folder path under windows (the same old
+  fucking shitty path seperator problem again!!! )
 
 v10.1.16
 - projectManager: the invalid characters in project and sequence are now
